Added 2 more example projects, and added OpenAi.Answers

--- a/samples/03_Classifications/03_Classifications.csproj
+++ b/samples/03_Classifications/03_Classifications.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>_02_Searches</RootNamespace>
+    <RootNamespace>_03_Classifications</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
