--- a/samples/04_Answers/04_Answers.csproj
+++ b/samples/04_Answers/04_Answers.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>_02_Searches</RootNamespace>
+    <RootNamespace>_04_Answers</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
