--- a/src/OpenAI.Net.csproj
+++ b/src/OpenAI.Net.csproj
@@ -12,7 +12,8 @@
     <Authors>William Welsh</Authors>
     <Company />
     <PackageTags>openai open ai wrapper openai.net</PackageTags>
-    <PackageReleaseNotes>An unofficial .NET API wrapper for OpenAI.</PackageReleaseNotes>
+    <PackageReleaseNotes>Added davinci-instruct-beta, curie-instruct-beta, and untested codex models (davinci-codex and cushman-codex). Added WithStop to CompletionRequestBuilder</PackageReleaseNotes>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 	<ItemGroup>
