Add WithUser to completions and increment package

--- a/src/OpenAI.Net.csproj
+++ b/src/OpenAI.Net.csproj
@@ -12,8 +12,8 @@
     <Authors>William Welsh</Authors>
     <Company />
     <PackageTags>openai open ai wrapper openai.net</PackageTags>
-    <PackageReleaseNotes>Added davinci-instruct-beta, curie-instruct-beta, and untested codex models (davinci-codex and cushman-codex). Added WithStop to CompletionRequestBuilder</PackageReleaseNotes>
-    <Version>1.0.2</Version>
+    <PackageReleaseNotes>Adds user id option to completions</PackageReleaseNotes>
+    <Version>1.0.4</Version>
   </PropertyGroup>
 
 	<ItemGroup>
